SERVER-58171 Changing time-series granularity does not update view definition