src/mongo/db/catalog/coll_mod.cpp
@@ -114,35 +114,6 @@ struct CollModRequest {
     bool recordPreImages = false;
 };
 
-bool isValidTimeseriesGranularityTransition(BucketGranularityEnum current,
-                                            BucketGranularityEnum target) {
-    bool validTransition = true;
-    if (current == target) {
-        return validTransition;
-    }
-
-    switch (current) {
-        case BucketGranularityEnum::Seconds: {
-            if (target != BucketGranularityEnum::Minutes) {
-                validTransition = false;
-            }
-            break;
-        }
-        case BucketGranularityEnum::Minutes: {
-            if (target != BucketGranularityEnum::Hours) {
-                validTransition = false;
-            }
-            break;
-        }
-        case BucketGranularityEnum::Hours: {
-            validTransition = false;
-            break;
-        }
-    }
-
-    return validTransition;
-}
-
 StatusWith<CollModRequest> parseCollModRequest(OperationContext* opCtx,
                                                const NamespaceString& nss,
                                                const CollectionPtr& coll,
@@ -366,12 +337,6 @@ StatusWith<CollModRequest> parseCollModRequest(OperationContext* opCtx,
                 return Status(ErrorCodes::InvalidOptions,
                               str::stream() << "option only supported on a timeseries collection: "
                                             << fieldName);
-            }
-
-            if (e.Obj().hasField("granularity")) {
-                // TODO: SERVER-58171 Re-enable this feature
-                return Status(ErrorCodes::InvalidOptions,
-                              "Changing timeseries 'granularity' is not allowed");
             }
 
             cmr.timeseries = e;
@@ -651,21 +616,10 @@ Status _collModInternal(OperationContext* opCtx,
         }
 
         if (ts.isABSONObj()) {
-            TimeseriesOptions newOptions = *oldCollOptions.timeseries;
-            bool changed = false;
-
-            if (ts.Obj().hasField("granularity")) {
-                BSONElement granularityElem = ts.Obj().getField("granularity");
-                BucketGranularityEnum target = BucketGranularity_parse(
-                    IDLParserErrorContext("BucketGranularity"), granularityElem.valueStringData());
-                if (target != oldCollOptions.timeseries->getGranularity()) {
-                    newOptions.setGranularity(target);
-                    newOptions.setBucketMaxSpanSeconds(
-                        timeseries::getMaxSpanSecondsFromGranularity(target));
-                    changed = true;
-                }
-            }
-
+            auto res = timeseries::applyTimeseriesOptionsModifications(*oldCollOptions.timeseries,
+                                                                       ts.Obj());
+            uassertStatusOK(res);
+            auto [newOptions, changed] = res.getValue();
             if (changed) {
                 coll.getWritableCollection()->setTimeseriesOptions(opCtx, newOptions);
             }
