src/mongo/db/timeseries/timeseries_options.h
@@ -58,5 +58,10 @@ int getMaxSpanSecondsFromGranularity(BucketGranularityEnum granularity);
  */
 int getBucketRoundingSecondsFromGranularity(BucketGranularityEnum granularity);
 
+StatusWith<std::pair<TimeseriesOptions, bool>> applyTimeseriesOptionsModifications(
+    const TimeseriesOptions& current, const BSONObj& mod);
+
+BSONObj generateViewPipeline(const TimeseriesOptions& options, bool asArray);
+
 }  // namespace timeseries
 }  // namespace mongo
