jstests/core/timeseries/bucket_granularity.js
@@ -19,6 +19,17 @@
 
 (function() {
 
+function verifyViewPipeline(coll) {
+    const cProps =
+        db.runCommand({listCollections: 1, filter: {name: coll.getName()}}).cursor.firstBatch[0];
+    const cSeconds = cProps.options.timeseries.bucketMaxSpanSeconds;
+    const vProps = db.system.views.find({_id: `${db.getName()}.${coll.getName()}`}).toArray()[0];
+    const vSeconds = vProps.pipeline[0].$_internalUnpackBucket.bucketMaxSpanSeconds;
+    assert.eq(cSeconds,
+              vSeconds,
+              `expected view pipeline 'bucketMaxSpanSeconds' to match timeseries options`);
+}
+
 (function testSeconds() {
     let coll = db.granularitySeconds;
     coll.drop();
@@ -88,6 +99,7 @@
 
     assert.commandWorked(db.createCollection(
         coll.getName(), {timeseries: {timeField: 't', granularity: 'seconds'}}));
+    verifyViewPipeline(coll);
 
     // All measurements land in the same bucket.
     assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:00:00.000Z")}));
@@ -102,21 +114,64 @@
     assert.commandWorked(coll.insert({t: ISODate("2021-04-22T21:00:00.000Z")}));
     assert.eq(2, db.system.buckets.granularitySecondsToMinutes.find().itcount());
 
-    // TODO SERVER-58171: Re-enable these tests:
     // Now let's bump to minutes and make sure we get the expected behavior
-    // assert.commandWorked(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'minutes'}}));
+    assert.commandWorked(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'minutes'}}));
+    verifyViewPipeline(coll);
 
     // All measurements land in the same bucket.
-    // assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:00:00.000Z")}));
-    // assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:22:02.000Z")}));
-    // assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:59:59.999Z")}));
-    // assert.eq(2, db.system.buckets.granularitySecondsToMinutes.find().itcount());
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:00:00.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:22:02.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:59:59.999Z")}));
+    assert.eq(2, db.system.buckets.granularitySecondsToMinutes.find().itcount());
 
     // Expect bucket max span to be one day. A new measurement outside of this range should create
     // a new bucket.
-    // assert.commandWorked(coll.insert({t: ISODate("2021-04-23T21:00:00.000Z")}));
-    // assert.eq(3, db.system.buckets.granularitySecondsToMinutes.find().itcount());
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-23T21:00:00.000Z")}));
+    assert.eq(3, db.system.buckets.granularitySecondsToMinutes.find().itcount());
+
+    // Make sure when we query, we use the new bucket max span to make sure we get all matches
+    assert.eq(4, coll.find({t: {$gt: ISODate("2021-04-23T19:00:00.000Z")}}).itcount());
+})();
+
+(function testIncreasingSecondsToHours() {
+    let coll = db.granularitySecondsToHours;
+    coll.drop();
+
+    assert.commandWorked(db.createCollection(
+        coll.getName(), {timeseries: {timeField: 't', granularity: 'seconds'}}));
+    verifyViewPipeline(coll);
+
+    // All measurements land in the same bucket.
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:00:00.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:00:03.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:00:59.999Z")}));
+    assert.eq(1, db.system.buckets.granularitySecondsToHours.find().itcount());
+
+    // Expect bucket max span to be one hour. A new measurement outside of this range should create
+    // a new bucket.
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:59:59.999Z")}));
+    assert.eq(1, db.system.buckets.granularitySecondsToHours.find().itcount());
+    assert.commandWorked(coll.insert({t: ISODate("2021-04-22T21:00:00.000Z")}));
+    assert.eq(2, db.system.buckets.granularitySecondsToHours.find().itcount());
+
+    assert.commandWorked(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'hours'}}));
+    verifyViewPipeline(coll);
+
+    // All measurements land in the same bucket.
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-22T00:00:00.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-22T18:11:03.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-22T20:59:59.999Z")}));
+    assert.eq(2, db.system.buckets.granularitySecondsToHours.find().itcount());
+
+    // Expect bucket max span to be 30 days. A new measurement outside of this range should create
+    // a new bucket.
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-22T21:00:00.001Z")}));
+    assert.eq(3, db.system.buckets.granularitySecondsToHours.find().itcount());
+
+    // Make sure when we query, we use the new bucket max span to make sure we get all matches
+    assert.eq(4, coll.find({t: {$gt: ISODate("2021-05-21T00:00:00.000Z")}}).itcount());
 })();
 
 (function testIncreasingMinutesToHours() {
@@ -125,6 +180,7 @@
 
     assert.commandWorked(db.createCollection(
         coll.getName(), {timeseries: {timeField: 't', granularity: 'minutes'}}));
+    verifyViewPipeline(coll);
 
     // All measurements land in the same bucket.
     assert.commandWorked(coll.insert({t: ISODate("2021-04-22T20:00:00.000Z")}));
@@ -139,43 +195,45 @@
     assert.commandWorked(coll.insert({t: ISODate("2021-04-23T20:00:00.000Z")}));
     assert.eq(2, db.system.buckets.granularityMinutesToHours.find().itcount());
 
-    // TODO SERVER-58171: Re-enable these tests:
-    // assert.commandWorked(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'hours'}}));
+    assert.commandWorked(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'hours'}}));
+    verifyViewPipeline(coll);
 
     // All measurements land in the same bucket.
-    // assert.commandWorked(coll.insert({t: ISODate("2021-05-23T00:00:00.000Z")}));
-    // assert.commandWorked(coll.insert({t: ISODate("2021-05-23T18:11:03.000Z")}));
-    // assert.commandWorked(coll.insert({t: ISODate("2021-05-23T19:59:59.999Z")}));
-    // assert.eq(2, db.system.buckets.granularityMinutesToHours.find().itcount());
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-23T00:00:00.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-23T18:11:03.000Z")}));
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-23T19:59:59.999Z")}));
+    assert.eq(2, db.system.buckets.granularityMinutesToHours.find().itcount());
 
     // Expect bucket max span to be 30 days. A new measurement outside of this range should create
     // a new bucket.
-    // assert.commandWorked(coll.insert({t: ISODate("2021-05-23T20:00:00.001Z")}));
-    // assert.eq(3, db.system.buckets.granularityMinutesToHours.find().itcount());
+    assert.commandWorked(coll.insert({t: ISODate("2021-05-23T20:00:00.001Z")}));
+    assert.eq(3, db.system.buckets.granularityMinutesToHours.find().itcount());
+
+    // Make sure when we query, we use the new bucket max span to make sure we get all matches
+    assert.eq(4, coll.find({t: {$gt: ISODate("2021-05-22T00:00:00.000Z")}}).itcount());
 })();
 
 (function testReducingGranularityFails() {
-    let coll = db.granularityMinutesToHours;
+    let coll = db.reducingGranularityFails;
     coll.drop();
 
-    // TODO SERVER-58171: Re-enable these tests:
-    // assert.commandWorked(db.createCollection(
-    // coll.getName(), {timeseries: {timeField: 't', granularity: 'minutes'}}));
+    assert.commandWorked(db.createCollection(
+        coll.getName(), {timeseries: {timeField: 't', granularity: 'minutes'}}));
 
     // Decreasing minutes -> seconds shouldn't work.
-    // assert.commandFailed(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'seconds'}}));
+    assert.commandFailed(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'seconds'}}));
 
     // Increasing minutes -> hours should work fine.
-    // assert.commandWorked(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'hours'}}));
+    assert.commandWorked(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'hours'}}));
 
     // Decreasing hours -> minutes shouldn't work.
-    // assert.commandFailed(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'minutes'}}));
+    assert.commandFailed(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'minutes'}}));
     // Decreasing hours -> seconds shouldn't work either.
-    // assert.commandFailed(
-    // db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'seconds'}}));
+    assert.commandFailed(
+        db.runCommand({collMod: coll.getName(), timeseries: {granularity: 'seconds'}}));
 })();
 })();
